# chain-bench

./: .gitignore  CLAUDE.md
agent_docs/: bench-diagnostic-report.md  block_time_probe.py  chain-eval-design.md  mempool_probe.py  submit_throughput_probe.py
bench/: Cargo.toml  test_anvil.sh
bench/src/: batch_rpc.rs  block_stream.rs  cli.rs  config.rs  contracts.rs  fund.rs  main.rs  market.rs  market_stats.rs  metrics.rs  nonce.rs  ramp.rs  simulate.rs  tx_tracker.rs  wallet.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MockToken.sol  Vault.sol
contracts/test/: Vault.t.sol
probes/: Cargo.toml
probes/src/: block_time.rs  main.rs  mempool.rs  rpc.rs  throughput.rs
