[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["full", "signer-mnemonic"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
csv = "1"
serde = { version = "1", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
rand = "0.9"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
