[package]
name = "probes"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["full", "signer-mnemonic"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
eyre = "0.6"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
